--- a/app/components/files/type-video/template.hbs
+++ b/app/components/files/type-video/template.hbs
@@ -1,1 +1,3 @@
-<video src={{this.model.rawPath}} controls="controls"></video>
+<div class="flex w-full h-full items-center justify-center flex-1">
+  <video src={{@model.rawPath}} controls="controls"></video>
+</div>
