--- a/app/components/sidebar/template.hbs
+++ b/app/components/sidebar/template.hbs
@@ -1,6 +1,6 @@
-<div class="h-12 bg-blue-500">
+<a href="/" class="block h-12 bg-blue-500">
   <img src="/images/sidebar-logo@2x.png" width="60" height="48" alt="Davros" class="block absolute top-0 right-0">
-</div>
+</a>
 
 <nav class="sidebar mt-6 text-center">
   <LinkTo @route="home" @current-when="files file">
