--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -1,9 +1,11 @@
 <TitleBar>
-  Not Found
+  <div class="title text-white text-lg flex-1">
+    Not Found
+  </div>
 </TitleBar>
 
-<PaperContent @class="notfound" @flex-layout="column" @flex={{true}}>
-  <div class="huge">404 Not Found</div>
+<div class="not-found p-4">
+  <div class="text-xl font-bold">404 Not Found</div>
 
   <div class="description">We couldn't find this page. Please check the URL to make sure it is correct.</div>
-</PaperContent>
+</div>
