--- a/app/components/files/type-audio/template.hbs
+++ b/app/components/files/type-audio/template.hbs
@@ -1,1 +1,3 @@
-<audio src={{this.model.rawPath}} controls="controls"></audio>
+<div class="w-full h-full flex items-center justify-center">
+  <audio src={{this.model.rawPath}} controls="controls"></audio>
+</div>
