--- a/app/components/files/type-pdf/template.hbs
+++ b/app/components/files/type-pdf/template.hbs
@@ -1,3 +1,3 @@
-<object data={{this.model.rawPath}} type="application/pdf">
-  <embed src={{this.model.rawPath}} type="application/pdf">
+<object class="w-full h-full bg-white" data={{@model.rawPath}} type="application/pdf">
+  <embed src={{@model.rawPath}} type="application/pdf">
 </object>
