--- a/app/styles/components.css
+++ b/app/styles/components.css
@@ -1,15 +1,22 @@
-.button-primary {
-  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+@import './spinner';
+@import './buttons';
+@import './forms';
+@import './changelog';
+@import './sidebar';
+@import 'photoswipe/dist/photoswipe.css';
+
+.file-list tbody tr:nth-child(odd) {
+  @apply bg-gray-100;
 }
 
-.button-primary:hover {
-  @apply bg-blue-700;
+.file-list .updated .long {
+  min-width: 110px;
 }
 
-.form-input {
-  @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight;
+.file-list .updated .short {
+  min-width: 50px;
 }
 
-.form-input:focus {
-  @apply outline-none shadow-outline;
+.file-list .size .long {
+  min-width: 60px;
 }
