--- a/app/components/files/type-code.hbs
+++ b/app/components/files/type-code.hbs
@@ -4,7 +4,7 @@
       There was an error rendering this preview.
     </div>
   {{else}}
-    <iframe class="w-full h-full border-t" title="Document Preview" class={{this.size}} srcdoc={{this.srcDoc}} sandbox></iframe>
+    <iframe class="w-full h-full border-t" title="Document Preview" srcdoc={{this.srcDoc}} sandbox></iframe>
   {{/if}}
 {{else}}
   <p>Your browser doesn't support sandboxing, so we can't show a preview inline.</p>
