--- a/app/components/files/type-markdown.hbs
+++ b/app/components/files/type-markdown.hbs
@@ -2,7 +2,7 @@
   {{#if (eq this.previewState "error")}}
     There was an error rendering this preview.
   {{else}}
-    <iframe class="w-full h-full border-t" title="Document Preview" class={{this.size}} srcdoc={{this.srcDoc}} sandbox></iframe>
+    <iframe class="w-full h-full border-t" title="Document Preview" srcdoc={{this.srcDoc}} sandbox></iframe>
   {{/if}}
 {{else}}
   <p>Your browser doesn't support sandboxing, so we can't show a preview inline.</p>
