--- a/app/components/new-directory-dialog.hbs
+++ b/app/components/new-directory-dialog.hbs
@@ -7,7 +7,10 @@
 </div>
 
 <form {{on "submit" this.create}}>
-  <input label="Name" class="form-input my-4" placeholder="Name" autofocus={{true}} value={{this.directoryName}} {{on "change" (fn (mut this.directoryName))}} />
+  <input label="Name" class="form-input my-4" placeholder="Name" autofocus={{true}} value={{this.directoryName}} {{on "keyup" this.onChange}} />
+  {{#if this.validationError}}
+    <p class="text-red-500 font-sm" >{{this.validationError}}</p>
+  {{/if}}
 
   <div class="form-actions flex">
     <span class="flex-1"></span>
