--- a/app/components/progress-bar.hbs
+++ b/app/components/progress-bar.hbs
@@ -1,5 +1,5 @@
 <div class="relative">
   <div class="overflow-hidden h-2 text-xs flex bg-green-200">
-    <div style="width:{{@value}}%" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
+    <div style={{this.style}} class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
   </div>
 </div>
