--- a/app/components/offer-iframe.hbs
+++ b/app/components/offer-iframe.hbs
@@ -1,6 +1,6 @@
 <iframe title="offer iframe"
         class="offer-iframe border h-8 p-1 bg-white"
-        src={{@src}}
+        src={{this.src}}
         ...attributes
         {{did-insert this.setupListener}}
         {{will-destroy this.destroyListener}}>
