--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,7 @@
 <TitleBar>
-  <div class="title text-white text-lg flex-1">
+  <h1 class="title text-white text-lg flex-1">
     About
-  </div>
+  </h1>
 </TitleBar>
 
 <div class="about p-4 flex-1 w-full h-full overflow-auto">
