--- a/app/templates/publishing.hbs
+++ b/app/templates/publishing.hbs
@@ -1,7 +1,7 @@
 <TitleBar>
-  <div class="title text-white text-lg flex-1">
+  <h1 class="title text-white text-lg flex-1">
     Web Publishing
-  </div>
+  </h1>
 </TitleBar>
 
 <div class="publishing p-4">
