--- a/app/components/clients.hbs
+++ b/app/components/clients.hbs
@@ -1,7 +1,7 @@
 <TitleBar>
-  <div class="title text-white text-lg flex-1">
+  <h1 class="title text-white text-lg flex-1">
     Desktop and Mobile Clients
-  </div>
+  </h1>
 </TitleBar>
 
 <div class="p-4">
