--- a/app/components/image-thumbnail.hbs
+++ b/app/components/image-thumbnail.hbs
@@ -1,1 +1,1 @@
-<img src={{this.src}} width={{@width}} height={{@height}} ...attributes>
+<img alt="" src={{this.src}} width={{@width}} height={{@height}} ...attributes>
