--- a/app/components/header-item.hbs
+++ b/app/components/header-item.hbs
@@ -1,4 +1,4 @@
-<button type="button" class="icon-button p-1 mx-2 rounded hover:bg-blue-700" {{on "click" @onClick}}>
+<button type="button" class="icon-button p-1 mx-2 mt-1 rounded hover:bg-blue-700" {{on "click" @onClick}}>
   <Icon @icon={{@icon}} @ariaLabel={{@title}} class="block" />
 
   <EmberTooltip>
