fix checkbox css on windows

--- a/app/styles/forms.css
+++ b/app/styles/forms.css
@@ -6,12 +6,12 @@
   @apply outline-none shadow-outline;
 }
 
-.toggle-checkbox:checked {
+.toggle-checkbox:checked ~ .toggle-switch {
   @apply: right-0 border-green-400;
   right: 0;
   border-color: #68d391;
 }
-.toggle-checkbox:checked + .toggle-label {
+.toggle-checkbox:checked ~ .toggle-label {
   @apply: bg-green-400;
   background-color: #68d391;
 }
