--- a/app/components/file.hbs
+++ b/app/components/file.hbs
@@ -55,7 +55,7 @@
     <div class="fsinfo text-sm flex">
       <div class="flex-1 mr-2">
         <span title={{this.model.mtime}} class="updated">
-          Updated {{moment-from-now this.model.mtime locale="en" interval=5000}}
+          Updated {{relative-time this.model.mtime locale="en" interval=5000 addSuffix=true}}
         </span>
         &middot;
         <span title="{{commify this.model.size}} bytes" class="size">
@@ -87,7 +87,7 @@
               @active={{this.deleteDialogActive}}
               @onClose={{toggle this "deleteDialogActive"}}
               as |modalContent|>
-  <DeleteDialog @onClose={{modalContent.onClose}} @onDelete={{route-action "delete"}}>
+  <DeleteDialog @onClose={{modalContent.onClose}} @onDelete={{@onDelete}}>
     Are you sure you want to delete the file {{this.model.name}}? It will also be deleted from any synced clients.
   </DeleteDialog>
 </ModalContent>
